[tool.poetry]
name = "webfastapi"
version = "0.1.0"
description = ""
authors = ["zhaisilong <zhaisilong@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
Jinja2 = "^3.1.0"
sqlalchemy = "^1.4.32"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
